syntax = "proto3";

option go_package = "testservice-server/v1;testservice_v1";

package testservice.v1;

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service TestService {
  rpc Echo(EchoRequest) returns (EchoResponse) {};
}
